Bug 1303025 - Accept null for body param in constructor of Response. r=bkelly

MozReview-Commit-ID: LeEFcQzPJlv

--HG--
extra : rebase_source : 37980f7601143692989d17a2e715f0c5284730a4